--- a/templates/contactanos_mail.html
+++ b/templates/contactanos_mail.html
@@ -33,7 +33,7 @@
 						</tr>
 						<tr>
 							<td width="100%" style="font-size: 15px; color:#87919F; text-align: left; font-family: Helvetica, Arial, sans-serif; line-height: 24px; vertical-align: top; text-transform: uppercase; letter-spacing: 0px;">	
-								Hola <strong>{{biblioteca_compartida.perfil_admin}}</strong>
+								Hola <strong>Administrador de Letras</strong>
 							</td>
 						</tr>
 						<tr>
@@ -41,14 +41,11 @@
 						</tr>
 						<tr>	
 							<td width="100%" style="font-size: 14px; color:#87919F; text-align: left; font-family: Helvetica, Arial, sans-serif; line-height: 24px; vertical-align: top;">
-								{{perfil_envio}} desea leer el libro <strong>{{titulo_libro}}</strong> de <strong>{{titulo_autor}}</strong>
-								y te ha pedido que le prestes.<br>
-
-								mensaje de {{nombre_usuario_envio}}: <br> "{{mensaje}}"
-
+								El usuario <strong>{{nombre}}</strong>, con el email <strong>{{correo}}</strong> se ha contactado con el siguiente mensaje:			
 								<br>
-								Teléfono: {{telefono}}
+								Tema: {{tema}}
 								<br>
+								{{mensaje}}								
 							</td>
 						</tr>
 						<tr>
@@ -63,8 +60,6 @@
 						</tr>
 					</tbody>
 				</table>
-				<br>
-				<br>
 				<br>
 				<br>
 				<p><small> Letras.Club, un sitio web de lectores que comparten sus libros </small></p>
