--- a/perfiles/templates/perfiles/perfil_propio.html
+++ b/perfiles/templates/perfiles/perfil_propio.html
@@ -300,7 +300,7 @@
 
 	{% if grupos %}
 		<hr class ="half-margins invisible">
-		<h4> Grupos </h4>		
+		<h4> Grupos </h4>
 		{% for grupo in grupos %}
 			<a href="{% url 'grupos:main_grupo_actividad' grupo.id %}" class="">{{grupo.nombre}}</a>
 			<br>
@@ -324,9 +324,20 @@
 	<div class="divider">
 		<i class="fa fa-book"></i>
 	</div>
-
-	<h3>
-
+	
+	{% if bibliotecas_compartidas %}
+		{% for biblioteca in bibliotecas_compartidas %}
+		<div class = "well">
+			<img src="{{biblioteca.imagen}}" class="img-responsive circular pull-right">
+			<br>
+			<h3>
+				<a href="{% url 'libros:biblioteca_compartida' biblioteca.slug  %}" class="">{{biblioteca.nombre}}</a>
+			</h3>
+		</div>
+		{% endfor %}
+		<hr class = "half-margins invisible">
+	{% endif %}
+	
 	<div class="row profile-activity hidden-xs">
 		<!-- activity item -->
 		<div class="col-xs-10 col-sm-11">
@@ -345,12 +356,12 @@
 			{% empty %}
 				<p> No tienes libros disponibles por ahora </p>
 			{% endfor %}
+		</div>
 
 		<div class="col-sm-12">
 			<hr class="half-margins" />
 		</div><!-- /activity separator -->
 	</div>
-	<!-- /activity list -->
 </div>
 {% endblock content %}
 
