--- a/templates/pedir_libro_bcompartida_mail.html
+++ b/templates/pedir_libro_bcompartida_mail.html
@@ -33,7 +33,7 @@
 						</tr>
 						<tr>
 							<td width="100%" style="font-size: 15px; color:#87919F; text-align: left; font-family: Helvetica, Arial, sans-serif; line-height: 24px; vertical-align: top; text-transform: uppercase; letter-spacing: 0px;">	
-								Hola <strong>{{biblioteca_compartida.perfil_admin}}</strong>
+								Hola <strong>{{usuario_receptor_mail}}</strong>
 							</td>
 						</tr>
 						<tr>
@@ -41,14 +41,10 @@
 						</tr>
 						<tr>	
 							<td width="100%" style="font-size: 14px; color:#87919F; text-align: left; font-family: Helvetica, Arial, sans-serif; line-height: 24px; vertical-align: top;">
-								{{perfil_envio}} desea leer el libro <strong>{{titulo_libro}}</strong> de <strong>{{titulo_autor}}</strong>
-								y te ha pedido que le prestes.<br>
+								{{nombre_usuario_envio}} desea leer el libro <strong>{{titulo_libro}}</strong> de <strong>{{titulo_autor}}</strong>
+								que está disponible en <strong>{{biblioteca_compartida_nombre}}</strong>.<br>
 
-								mensaje de {{nombre_usuario_envio}}: <br> "{{mensaje}}"
-
-								<br>
-								Teléfono: {{telefono}}
-								<br>
+								Por favor, visita tu perfil en Letras.Club y revisa la sección "Administrar Libros".
 							</td>
 						</tr>
 						<tr>
