--- a/grupos/templates/grupos/busqueda_grupo.html
+++ b/grupos/templates/grupos/busqueda_grupo.html
@@ -10,7 +10,7 @@
 	<div class="container parallax-content">
 		<div class="row">
 			<div class="col-md-5 col-sm-5 col-md-offset-1">
-				<h3>Búsqueda de libros disponibles en <br> <strong>{{grupo.nombre}}</strong></h3>
+				<h3>Búsqueda de libros disponibles en <br> {{grupo.nombre}} </h3>
 			</div>
 		</div>
 	</div>
@@ -30,7 +30,7 @@
 					</a>
 				</div><!-- /left text -->
 				
-				{% if l.perfil != perfil_usuario %}
+				{% if l.perfil != perfil_usuario and user.is_authenticated %}
 				<div class="col-md-3 col-sm-3 text-right"><!-- right btn -->
 					<a href="{% url 'libros:pedir_libro' l.id %}" rel="nofollow" target="_blank" class="btn btn-default btn-lg">Pedir Libro</a>
 				</div><!-- /right btn -->
