--- a/libros/templates/libros/biblioteca_compartida.html
+++ b/libros/templates/libros/biblioteca_compartida.html
@@ -31,8 +31,8 @@
 		<strong>
 			Reglas:<br>
 		</strong>
-			Puedes cambiar un libro por otro o pedirlo. El administrador de la <strong>Biblioteca Compartida</strong> debe aceptar el cambio o el préstamo.<br>
-			Si deseas pedir un libro prestado, debes estar registrado en <strong>Letras.Club</strong> y dar click en el botón "Pedir Libro". 
+			Puedes <strong>cambiar un libro</strong> por otro o pedirlo. El administrador de la <strong>Biblioteca Compartida</strong> debe aceptar el cambio o el préstamo.<br>
+			Si deseas <strong>pedir un libro prestado</strong>, debes estar registrado en <strong>Letras.Club</strong> y dar click en el botón "Pedir Libro". 
 	</p>
 </div>
 <h1> Libros </h1>
@@ -44,8 +44,12 @@
 					<strong>{{l.libro.titulo}}</strong> {{l.libro.autor}}
 				</div>
 				<div class="col-md-3 col-sm-3 text-right"><!-- right btn -->
-					<a href="" rel="nofollow" data-toggle="modal" data-target="#modal_pedir_libro" data-id="{{l.id}}" class="btn btn-warning btn-lg pedir_libro"
-					data-url-ajax="{% url 'libros:request_existente_bcompartida_ajax' %}" data-titulo="{{l.libro.titulo}}">Pedir Libro</a>
+					{% if user.is_authenticated %}
+						<a href="" rel="nofollow" data-toggle="modal" data-target="#modal_pedir_libro" data-id="{{l.id}}" class="btn btn-default btn-lg pedir_libro"
+						data-url-ajax="{% url 'libros:request_existente_bcompartida_ajax' %}" data-titulo="{{l.libro.titulo}}">Pedir Libro</a>
+					{% else %}
+						<a href="{% url 'libros:main' %}" class="btn btn-default btn-lg" title="Necesitas hacer Login para pedir este libro"><i class="fa fa-lock"></i></a>
+					{% endif %}
 				</div><!-- /right btn -->
 			</div>
 		</div>
